* Add enable/disable toggle/button to accounts table
* Modify the close button of the buy license dialog