@@ -7,7 +7,7 @@
   },
   "package": {
     "productName": "TikMatrix",
-    "version": "2.1.7"
+    "version": "2.1.8"
   },
   "tauri": {
     "allowlist": {
