@@ -244,7 +244,7 @@ export const i18n = createI18n({
       tktools: 'TKTools',
       moveToGroup: 'Move To Group',
       noDevicesSelected: 'No Devices Selected',
-      uid: 'UID',
+      mid: 'Machine ID',
       proxyServer: 'Proxy Server',
       license: 'License',
       emailSuffix: 'Email Suffix',
@@ -498,8 +498,17 @@ export const i18n = createI18n({
       close: 'Close',
       loadingLicense: 'Loading License...',
       loading: 'Loading...',
+      couponCode: 'Coupon Code',
+      apply: 'Apply',
+      copied: 'Copied',
+      rewards: 'Rewards',
+      applied: 'Applied',
     },
     'zh-CN': {
+      applied: '已应用',
+      rewards: '奖励',
+      couponCode: '优惠码',
+      apply: '应用',
       loadingLicense: '正在加载许可证...',
       loading: '加载中...',
       close: '关闭',
@@ -904,7 +913,7 @@ export const i18n = createI18n({
       noDevicesSelected: '未选择设备',
       showTimeSetting: '时间设置',
       showLanguageSetting: '语言设置',
-      uid: 'UID',
+      mid: '机器码',
       proxyServer: '代理服务器',
       license: '授权码',
       emailSuffix: '邮箱后缀',
