@@ -1,2 +1,3 @@
-* Add enable/disable toggle/button to accounts table
-* Modify the close button of the buy license dialog
+* Add enable/disable toggle button to the accounts table
+* Update close button styling in the license purchase dialog
+* Fix clear button functionality in materials section
